added some styling to the project

--- a/GoogleHome.html
+++ b/GoogleHome.html
@@ -1,32 +1,32 @@
-<DOCTYPE! html>
+<!DOCTYPE html>
 <html>
-<head>
-<link src="googlehomestyle.css" type="text" rel="css/stylesheets">
-<head>
-<body>
-<div>
-<nav>
- <a href="https://www.google.com">About</a>
- <a href="https://www.google.com">Store</a>
- <a href="https://www.google.com">Gmail</a>
- <a href="https://ww.google.com">Images</a>
- <img src="squares alt="grey squares">
- <button type="submit" name="Sign In">Sign In</button>
-</nav>
+ <head>
+    <link href="googlehomestyle.css" type="text/css" rel="stylesheet">
+ </head>
+    <body>
+      <div class="nav">
+      <div class="leftnav">
+        <a class="about" href="https://www.google.com">About</a>
+        <a class="store" href="https://www.google.com">Store</a>
+      </div>
+      <div class="rightnav">
+        <a class="gmail" href="https://www.google.com">Gmail</a>
+        <a class="images" href="https://ww.google.com">Images</a>
+        <img class="gs" src=ningreybox.jpg alt="grey squares">
+        <button class="btn" type="submit" name="Sign In">Sign In</button>
+      </div>
+     </div>
+<div class="logo">
+<img class="google" src=google.png alt="GOOGLE">
 </div>
-<div>
-<h1>Google</h1>
-</div>
-<div>
+<div class="search">
 <textarea rows="1" cols="1"><a href=google.com><image src="voice"></a></textarea>
-</div>
-<div>
-<button type="submit" name="search">Google Search</button>
-<button type="submit"name="lucky">I'mFeeling Lucky</button>
+<button class="btn1" type="submit" name="search">Google Search</button>
+<button class="btn2" type="submit" name="lucky">I'mFeeling Lucky</button>
 </div>
 <div>
 <footer>
-<nav>
+<nav class="footnav">
 <a href=""https://ww.google.com">Advertising</a>
 <a href=""https://ww.google.com">Business</a>
 <a href=""https://ww.google.com">Privacy</a>
@@ -35,5 +35,5 @@
 </nav>
 <footer>
 </div>
-<body>
+</body>
 </html>
